--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -31,9 +31,30 @@ body, .welcome {
   margin-top: 50px;
 }
 
+.intro {
+  display: flex;
+  flex-direction: column;
+}
+
 .words {
   font-size: 30px;
   text-align: center;
   width: 500px;
   padding-top: 200px;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 3px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 3px;
+  margin-top: 15px;
+}
+
+.progress-color {
+  background: #e65c00;
+  width: 1%;
+  height: 100%;
+  border-radius: 10px;
 }
