--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -9,6 +9,11 @@ body {
   font-style: italic
 }
 
+.page-title img {
+  height: 60px;
+  width:45px;
+}
+
 .welcome {
   background-image: url('../img/bg-image.jpg');
   background-size: cover;
