--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -22,7 +22,7 @@ body {
   position: relative;
 }
 
-.welcome-content {
+.welcome-content, .modal {
   background: rgba(36, 40, 38, 0.8);
   min-height: 100%;
   width: 100%;
@@ -102,13 +102,51 @@ body {
   margin-left: 5%;
 }
 
-#login {
+.login {
   margin-left: 20px;
 }
 
 .auth-btn input:hover {
   font-weight: bold;
   box-shadow: 1px 3px 2px 1px #000;
+}
+
+.modal {
+  z-index: 2;
+}
+
+.auth-form {
+  width: 500px;
+  padding: 20px;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin-top: 10%
+}
+
+form {
+  padding: 20px
+}
+
+.auth-form form label{
+  display: block;
+  float: left;
+}
+
+.auth-form input{
+  width: 100%;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  margin-bottom: 15px;
+  height: 20px;
+  padding: 10px;
+}
+
+.auth-form form input[type=submit]{
+  background: green;
+  color: #fff;
+  width: 120%
+
 }
 
 @media(max-width:875px) {
@@ -173,7 +211,7 @@ body {
     display: block;
     margin-bottom: 10px;
   }
-  #login{
+  .login{
     margin-left: 0;
   }
   .auth-btn{
