[ch #160415021] Add animation to auth-form

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -128,6 +128,22 @@ body {
   display: none;
 }
 
+.form-before-click {
+  width: 200px;
+  margin-top: 3%;
+  transform: rotate(-30deg);
+  transition: 1s;
+  transition-timing-function: ease-out;
+  opacity: 0;
+}
+
+.form-after-click {
+  transform: rotate(0);
+  transition: 1s;
+  transition-timing-function: ease-out;
+  opacity: 1;
+}
+
 .auth-form form label{
   display: block;
   float: left;
