--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -174,6 +174,25 @@ body {
   cursor: pointer;
 }
 
+#login-modal, #signup-modal {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.translate-form {
+  animation: translate-form 1s ease-out;
+  opacity: 1;
+}
+
+@keyframes translate-form {
+  0%   { 
+  transform: translateX(50%); 		
+  }
+  100% { 
+  transform: translateX(0%); 
+  }
+}
+
 .form-title {
   display: block; 
   font-weight: bold
