--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -299,6 +299,32 @@ nav ul li a:hover {
   font-weight: bold
 }
 
+.scroll-div {
+  margin-top: 500px;
+  display: flex;
+  color: #fff;
+  justify-content: space-around;
+  background: #004466;
+  padding-bottom: 5px;
+}
+
+.locate-div {
+  background: #004466;
+  border-radius: 10px;
+  box-shadow: 1px 2px 1px 1px gray;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.locate-div:hover {
+  transform: scale(1.05);
+}
+
+.food {
+  height: 300px;
+  border: #000 1px solid;
+}
+
 @media(max-width:875px) {
   .auth-btn input{
     margin-left: 0;
