--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -230,7 +230,7 @@ nav ul li a:hover {
 
 .auth-form {
   background: rgba(122, 56, 36, 0.4);
-  width: 500px;
+  max-width: 500px;
   padding: 40px;
   border: 1px solid white;
   border-radius: 10px;
@@ -562,9 +562,33 @@ nav ul li a:hover {
   color: #fff;
 }
 
+@media(max-width: 1300px) {
+  .food-advert {
+    left: 30%;
+  }
+}
+
+@media(max-width: 960px) {
+  .banner2 {
+    display: none;
+  }
+}
+
+@media(max-width: 900px) {
+  .food-advert {
+    left: 25%;
+  }
+}
+
 @media(max-width:875px) {
   .auth-btn input{
     margin-left: 0;
+  }
+}
+
+@media(max-width: 770px) {
+  .food-advert {
+    left: 20%;
   }
 }
 
@@ -574,12 +598,33 @@ nav ul li a:hover {
   }
 }
 
+@media(max-width: 900px) {
+  .food-advert {
+    left: 15%;
+  }
+}
+
+@media(max-width: 550px) {
+  .food-advert {
+    left: 10%;
+  }
+}
+
 @media(max-width:500px) {
   .auth-btn input{
     width: 150px;
   }
   .intro{
     height: 300px;
+  }
+  .food-advert {
+    left: 7%;
+  }
+}
+
+@media(max-width: 475px) {
+  .food-advert {
+    left: 5%;
   }
 }
 
@@ -595,15 +640,46 @@ nav ul li a:hover {
   }
 }
 
+@media(max-width: 450px) {
+  .food-advert {
+    left: 3%;
+  }
+}
+
+@media(max-width: 435px) {
+  .food-advert {
+    left: 1%;
+  }
+}
+
+@media(max-width: 427px) {
+  .food-advert {
+    width: 300px;
+    left: 10%;
+  }
+}
+
 @media(max-width:420px) {
   .words{
     height: 130px;
   }
 }
 
+@media(max-width: 385px) {
+  .food-advert {
+    left: 7%;
+  }
+}
+
 @media(max-width:380px) {
   .intro-words{
     padding-top: 5%;
+  }
+}
+
+@media(max-width: 365px) {
+  .food-advert {
+    left: 5%;
   }
 }
 
@@ -616,6 +692,12 @@ nav ul li a:hover {
   }
   .intro-words{
     padding-top: 0;
+  }
+}
+
+@media(max-width: 345px) {
+  .food-advert {
+    left: 3%;
   }
 }
 
