--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -597,7 +597,8 @@ nav ul li a:hover {
   flex-direction: column;
   border: #cccccc 1px solid;
   max-width: 960px;
-  margin: 0 auto;
+  margin: 20px auto;
+  display: none;
 }
 
 .mobile {
@@ -724,6 +725,9 @@ nav ul li a:hover {
 @media(max-width: 560px) {
   .orders-list {
     display: none;
+  }
+  .order-mobile {
+    display: block;
   }
 }
 
