--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -105,3 +105,52 @@ input[type='submit'] {
   font-weight: bold;
   box-shadow: 1px 1px 2px 1px #004466
 }
+
+/* //// */
+
+.orders-list {
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+  margin: 20px auto;
+  border: #cccccc 1px solid;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.order-history {
+  border: gray 1px solid;
+  display: flex;
+}
+
+.order-column {
+  flex: 1;
+  padding: 10px;
+}
+
+.order2, .order4 {
+  background: #efefef;
+}
+
+.order-history-title {
+  margin-top: 520px;
+}
+
+.column-head {
+  background: #e65c00;
+  font-weight: bold;
+}
+
+.edit, .delete  {
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.edit {
+  color: green;
+}
+
+.delete {
+  color: red;
+}
