--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -201,6 +201,7 @@ input[type='submit'] {
   position: absolute;
   color: #fff;
   z-index: 2;
+  display: none;
 }
 
 .specific-order-div {
@@ -218,6 +219,7 @@ input[type='submit'] {
   border-radius: 10px; 
   padding: 5px; 
   float: right;
+  cursor: pointer;
 }
 
 .specific-order {
