[ft #160541207] fix auth-form modal toggle

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -223,6 +223,12 @@ nav ul li a:hover {
 .modal {
   z-index: 2;
   display: none;
+  text-align: center;
+}
+
+.auth-modal-content {
+  margin: 0 auto;
+  max-width: 600px;
 }
 
 .auth-form {
@@ -274,12 +280,10 @@ nav ul li a:hover {
 }
 
 .close {
-  float: right; 
-  box-shadow: 1px 1px 1px 1px gray; 
-  border: 1px solid gray; 
-  padding: 0 3px; 
-  border-radius: 5px;
+  float: right;
   cursor: pointer;
+  color: #fff;
+  font-size: 20px;
 }
 
 #login-modal, #signup-modal {
@@ -622,6 +626,12 @@ nav ul li a:hover {
   color: #fff;
 }
 
+@media(max-width: 1366px) {
+  .auth-modal-content {
+    padding-left: 10%;
+  }
+}
+
 @media(max-width: 1300px) {
   .food-advert {
     left: 30%;
@@ -665,6 +675,9 @@ nav ul li a:hover {
   .auth-btn input{
     margin-left: 0;
   }
+  .auth-modal-content {
+    padding-left: 15%;
+  }
 }
 
 @media(max-width: 807px) {
@@ -706,9 +719,33 @@ nav ul li a:hover {
   }
 }
 
+@media(max-width: 700px) {
+  .auth-modal-content {
+    padding-left: 12%;
+  }
+}
+
+@media(max-width: 655px) {
+  .auth-modal-content {
+    padding-left: 10%;
+  }
+}
+
+@media(max-width: 615px) {
+  .auth-modal-content {
+    padding-left: 8%;
+  }
+}
+
 @media(max-width:600px) {
   .delivery-girl img{
     width: 80%;
+  }
+}
+
+@media(max-width: 585px) {
+  .auth-modal-content {
+    padding-left: 6%;
   }
 }
 
@@ -728,6 +765,9 @@ nav ul li a:hover {
   h1.page-title {
     font-size: 25px;
   }
+  .auth-modal-content {
+    padding-left: 3%;
+  }
 }
 
 @media(max-width: 550px) {
@@ -736,13 +776,25 @@ nav ul li a:hover {
   }
 }
 
+@media(max-width: 530px) {
+  .auth-modal-content {
+    padding-left: 2%;
+  }
+}
+
 @media(max-width: 515px) {
   .locate-div {
     padding: 10px;
   }
+  .auth-modal-content {
+    padding-left: 1%;
+  }
 }
 
 @media(max-width:500px) {
+  .auth-modal-content {
+    padding-left: 0;
+  }
   .auth-btn input{
     width: 150px;
   }
